deployment/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: template-agent
  labels:
    app: template-agent
    component: agent
spec:
  type: ClusterIP
  ports:
    - port: 5002
      targetPort: 5002
      protocol: TCP
      name: http
  selector:
    app: template-agent
    component: agent
